<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gatech.cs2340.android.drop.controllers.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/register_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_email_input"
        style="@style/EditText"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/login_email_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_password_input"
        style="@style/EditText"
        android:inputType="textPassword"
        android:labelFor="@+id/login_password_input" />

    <Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounder_corner_button"
        android:text="@string/sign_in"
        android:textAllCaps="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
